--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -9,28 +9,22 @@
     </configSections>
     <startup> 
         
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
     <userSettings>
         <Crypto_Notepad.Properties.Settings>
-            <setting name="RichTextFont" serializeAs="String">
-                <value>Consolas</value>
+            <setting name="editroFontColor" serializeAs="String">
+                <value>Black</value>
             </setting>
-            <setting name="RichForeColor" serializeAs="String">
-                <value>228, 228, 228</value>
+            <setting name="editorBackColor" serializeAs="String">
+                <value>White</value>
             </setting>
-            <setting name="RichBackColor" serializeAs="String">
-                <value>56, 56, 56</value>
-            </setting>
-            <setting name="MenuWrap" serializeAs="String">
+            <setting name="menuWrap" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="RichWrap" serializeAs="String">
+            <setting name="editorWrap" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="RichTextSize" serializeAs="String">
-                <value>11</value>
-            </setting>
-            <setting name="AssociateCheck" serializeAs="String">
+            <setting name="explorerAssociate" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="HashAlgorithm" serializeAs="String">
@@ -39,163 +33,105 @@
             <setting name="KeySize" serializeAs="String">
                 <value>256</value>
             </setting>
-            <setting name="TheSalt" serializeAs="String">
-                <value />
-            </setting>
             <setting name="PasswordIterations" serializeAs="String">
                 <value>1000</value>
             </setting>
-            <setting name="FirstLaunch" serializeAs="String">
+            <setting name="showToolbar" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="autoCheckUpdate" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="autoLock" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="WarningMsg" serializeAs="String">
-                <value>True</value>
+            <setting name="windowLocation" serializeAs="String">
+                <value>0, 0</value>
             </setting>
-            <setting name="ShowToolbar" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="AutoCheckUpdate" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="AutoLock" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="WindowSize" serializeAs="String">
+            <setting name="windowSize" serializeAs="String">
                 <value>645, 460</value>
             </setting>
-            <setting name="WindowState" serializeAs="String">
+            <setting name="windowState" serializeAs="String">
                 <value>Normal</value>
             </setting>
-            <setting name="AutoSave" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SendTo" serializeAs="String">
+            <setting name="sendTo" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="MenuIntegrate" serializeAs="String">
+            <setting name="explorerIntegrate" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="MenuIcons" serializeAs="String">
+            <setting name="menuIcons" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="ColoredToolbar" serializeAs="String">
+            <setting name="lnVisible" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="LNVisible" serializeAs="String">
-                <value>True</value>
+            <setting name="lnBackColor" serializeAs="String">
+                <value>240, 240, 240</value>
             </setting>
-            <setting name="LNBackgroundColor" serializeAs="String">
-                <value>53, 53, 53</value>
-            </setting>
-            <setting name="LNFontColorPanel" serializeAs="String">
+            <setting name="lnFontColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
-            <setting name="BLShow" serializeAs="String">
+            <setting name="blShow" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="BLColor" serializeAs="String">
+            <setting name="blColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
-            <setting name="BLStyle" serializeAs="String">
+            <setting name="blStyle" serializeAs="String">
                 <value>Solid</value>
             </setting>
-            <setting name="GLShow" serializeAs="String">
+            <setting name="glShow" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="GLColor" serializeAs="String">
+            <setting name="glColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
-            <setting name="GLStyle" serializeAs="String">
+            <setting name="glStyle" serializeAs="String">
                 <value>Solid</value>
             </setting>
-            <setting name="InserKey" serializeAs="String">
+            <setting name="insKey" serializeAs="String">
                 <value>Enable</value>
             </setting>
-            <setting name="CustomColor" serializeAs="String">
-                <value>0</value>
+            <setting name="customColor" serializeAs="String">
+                <value>16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215;16777215</value>
+            </setting>
+            <setting name="editorPaddingLeft" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="editorRightToLeft" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="editorFont" serializeAs="String">
+                <value>Microsoft Sans Serif, 10pt</value>
+            </setting>
+            <setting name="statusPanel" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="statusPanelBackColor" serializeAs="String">
+                <value>240, 240, 240</value>
+            </setting>
+            <setting name="statusPanelFontColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="toolbarBackColor" serializeAs="String">
+                <value>240, 240, 240</value>
+            </setting>
+            <setting name="toolbarBorder" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="searchPanelFontColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="searchPanelBackColor" serializeAs="String">
+                <value>240, 240, 240</value>
+            </setting>
+            <setting name="openLinks" serializeAs="String">
+                <value>LMB Click</value>
+            </setting>
+            <setting name="mainMenu" serializeAs="String">
+                <value>True</value>
             </setting>
         </Crypto_Notepad.Properties.Settings>
-        <EncryptPad.Properties.Settings>
-            <setting name="TopPosition" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="LeftPosition" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="RichTextFont" serializeAs="String">
-                <value>Consolas</value>
-            </setting>
-            <setting name="RichForeColor" serializeAs="String">
-                <value>228, 228, 228</value>
-            </setting>
-            <setting name="FormWidth" serializeAs="String">
-                <value>687</value>
-            </setting>
-            <setting name="FormHeight" serializeAs="String">
-                <value>428</value>
-            </setting>
-            <setting name="RichBackColor" serializeAs="String">
-                <value>56, 56, 56</value>
-            </setting>
-            <setting name="MenuWrap" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RichWrap" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RichTextSize" serializeAs="String">
-                <value>11</value>
-            </setting>
-            <setting name="HighlightsColor" serializeAs="String">
-                <value>101, 51, 6</value>
-            </setting>
-            <setting name="AssociateCheck" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HashAlgorithm" serializeAs="String">
-                <value>SHA1</value>
-            </setting>
-            <setting name="KeySize" serializeAs="String">
-                <value>192</value>
-            </setting>
-            <setting name="TheSalt" serializeAs="String">
-                <value/>
-            </setting>
-            <setting name="PasswordIterations" serializeAs="String">
-                <value>2</value>
-            </setting>
-            <setting name="FirstLaunch" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </EncryptPad.Properties.Settings>
-        <Encryption_Tool.Properties.Settings>
-            <setting name="TopPosition" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="LeftPosition" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="RichTextFont" serializeAs="String">
-                <value>Consolas, 9.75pt</value>
-            </setting>
-            <setting name="RichTextColor" serializeAs="String">
-                <value>66, 66, 74</value>
-            </setting>
-            <setting name="FormWidth" serializeAs="String">
-                <value>687</value>
-            </setting>
-            <setting name="FormHeight" serializeAs="String">
-                <value>428</value>
-            </setting>
-            <setting name="RichForeColor" serializeAs="String">
-                <value>White</value>
-            </setting>
-            <setting name="MenuWrap" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RichWrap" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </Encryption_Tool.Properties.Settings>
     </userSettings>
 </configuration>
