--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -132,6 +132,9 @@
             <setting name="mainMenu" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="oldToolbarIcons" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
