Renamed some properties

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -12,7 +12,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
     <userSettings>
         <Crypto_Notepad.Properties.Settings>
-            <setting name="editroFontColor" serializeAs="String">
+            <setting name="editroForeColor" serializeAs="String">
                 <value>Black</value>
             </setting>
             <setting name="editorBackColor" serializeAs="String">
@@ -36,7 +36,7 @@
             <setting name="PasswordIterations" serializeAs="String">
                 <value>1000</value>
             </setting>
-            <setting name="showToolbar" serializeAs="String">
+            <setting name="toolbarVisible" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="autoCheckUpdate" serializeAs="String">
@@ -54,7 +54,7 @@
             <setting name="windowState" serializeAs="String">
                 <value>Normal</value>
             </setting>
-            <setting name="sendTo" serializeAs="String">
+            <setting name="explorerSendTo" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="explorerIntegrate" serializeAs="String">
@@ -69,7 +69,7 @@
             <setting name="lnBackColor" serializeAs="String">
                 <value>240, 240, 240</value>
             </setting>
-            <setting name="lnFontColor" serializeAs="String">
+            <setting name="lnForeColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
             <setting name="blShow" serializeAs="String">
@@ -105,7 +105,7 @@
             <setting name="editorFont" serializeAs="String">
                 <value>Microsoft Sans Serif, 10pt</value>
             </setting>
-            <setting name="statusPanel" serializeAs="String">
+            <setting name="statusPanelVisible" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="statusPanelBackColor" serializeAs="String">
@@ -120,7 +120,7 @@
             <setting name="toolbarBorder" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="searchPanelFontColor" serializeAs="String">
+            <setting name="searchPanelForeColor" serializeAs="String">
                 <value>Black</value>
             </setting>
             <setting name="searchPanelBackColor" serializeAs="String">
@@ -129,7 +129,7 @@
             <setting name="openLinks" serializeAs="String">
                 <value>LMB Click</value>
             </setting>
-            <setting name="mainMenu" serializeAs="String">
+            <setting name="mainMenuVisible" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="oldToolbarIcons" serializeAs="String">
