More style settings for line numbers

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -135,6 +135,18 @@
             <setting name="oldToolbarIcons" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="mlVisible" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mlColor" serializeAs="String">
+                <value>164, 164, 164</value>
+            </setting>
+            <setting name="mlSide" serializeAs="String">
+                <value>Right</value>
+            </setting>
+            <setting name="mlStyle" serializeAs="String">
+                <value>Solid</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
