--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -147,6 +147,9 @@
             <setting name="mlStyle" serializeAs="String">
                 <value>Solid</value>
             </setting>
+            <setting name="alwaysOnTop" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
