--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -147,6 +147,12 @@
             <setting name="mlStyle" serializeAs="String">
                 <value>Solid</value>
             </setting>
+            <setting name="minimizeToTray" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="closeToTray" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="alwaysOnTop" serializeAs="String">
                 <value>False</value>
             </setting>
