Changed some names

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -63,34 +63,34 @@
             <setting name="menuIcons" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="lnVisible" serializeAs="String">
+            <setting name="lineNumbersVisible" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="lnBackColor" serializeAs="String">
+            <setting name="lineNumbersBackColor" serializeAs="String">
                 <value>240, 240, 240</value>
             </setting>
-            <setting name="lnForeColor" serializeAs="String">
+            <setting name="lineNumbersForeColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
-            <setting name="blShow" serializeAs="String">
+            <setting name="borderLinesVisible" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="blColor" serializeAs="String">
+            <setting name="borderLinesColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
-            <setting name="blStyle" serializeAs="String">
+            <setting name="borderLinesStyle" serializeAs="String">
                 <value>Solid</value>
             </setting>
-            <setting name="glShow" serializeAs="String">
+            <setting name="gridLinesVisible" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="glColor" serializeAs="String">
+            <setting name="gridLinesColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
-            <setting name="glStyle" serializeAs="String">
+            <setting name="gridLinesStyle" serializeAs="String">
                 <value>Solid</value>
             </setting>
-            <setting name="insKey" serializeAs="String">
+            <setting name="insertKey" serializeAs="String">
                 <value>Enable</value>
             </setting>
             <setting name="customColor" serializeAs="String">
@@ -135,16 +135,16 @@
             <setting name="oldToolbarIcons" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="mlVisible" serializeAs="String">
+            <setting name="marginLinesVisible" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="mlColor" serializeAs="String">
+            <setting name="marginLinesColor" serializeAs="String">
                 <value>164, 164, 164</value>
             </setting>
-            <setting name="mlSide" serializeAs="String">
+            <setting name="marginLinesSide" serializeAs="String">
                 <value>Right</value>
             </setting>
-            <setting name="mlStyle" serializeAs="String">
+            <setting name="marginLinesStyle" serializeAs="String">
                 <value>Solid</value>
             </setting>
             <setting name="minimizeToTray" serializeAs="String">
