Added setting to display border around the editor

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -156,6 +156,9 @@
             <setting name="alwaysOnTop" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="editorBorder" serializeAs="String">
+                <value>None</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
