Added search panel border setting

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -159,6 +159,9 @@
             <setting name="editorBorder" serializeAs="String">
                 <value>None</value>
             </setting>
+            <setting name="searchPanelBorder" serializeAs="String">
+                <value>Single</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
