Added ability to hide toolbar close button

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -162,6 +162,9 @@
             <setting name="searchPanelBorder" serializeAs="String">
                 <value>Single</value>
             </setting>
+            <setting name="toolbarCloseButton" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
