--- a/Crypto Notepad/Properties/Settings.settings
+++ b/Crypto Notepad/Properties/Settings.settings
@@ -152,5 +152,8 @@
     <Setting Name="searchPanelBorder" Provider="PortableSettingsProvider" Type="System.String" Scope="User">
       <Value Profile="(Default)">Single</Value>
     </Setting>
+    <Setting Name="toolbarCloseButton" Provider="PortableSettingsProvider" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
