Changed default values for editorBorder and searchPanelBorder parameters

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -157,10 +157,10 @@
                 <value>False</value>
             </setting>
             <setting name="editorBorder" serializeAs="String">
-                <value>None</value>
+                <value>FixedSingle</value>
             </setting>
             <setting name="searchPanelBorder" serializeAs="String">
-                <value>Single</value>
+                <value>None</value>
             </setting>
             <setting name="toolbarCloseButton" serializeAs="String">
                 <value>True</value>
