--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -165,6 +165,9 @@
             <setting name="toolbarCloseButton" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="singleInstance" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
