--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -40,7 +40,7 @@
                 <value>True</value>
             </setting>
             <setting name="autoCheckUpdate" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="autoLock" serializeAs="String">
                 <value>False</value>
